Fixed main body container in portfolio page to add margin from footer; wrapped text around profile picture in about me page

--- a/style.css
+++ b/style.css
@@ -1,8 +1,3 @@
-body {
-    min-height: 100%;
-    background: red;
-}
-
 .footer {
     position: fixed;
     bottom: 0;
@@ -54,8 +49,8 @@ a {
 .banner {
     position: absolute;
     bottom: 0px;
-    width: 350px;
-    padding: 20px;
+    width: 93%;
+    padding: 20px 0px;
     margin: 5% 5% 0% 5% auto;
     font-weight: 300;
     line-height: 30px;
@@ -66,4 +61,8 @@ a {
 
 .thumbnail {
     margin: 5% auto;
+}
+
+.margin-right {
+    margin-right: 10px;
 }
